--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -27,26 +27,27 @@ html(lang="ru")
 		
 		// Custom Browsers Color
 		meta(name='theme-color', content='#3361d8')
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/onepage-scroll.min.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/onepage-scroll.min.css" />
+		//- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700">
+		 
 		link(rel="stylesheet", href="libs/magnificPopup/magnific-popup.css")
 		link(rel="stylesheet", href="libs/swiper-4.2.0/swiper.min.css")
+		
+		link(rel="stylesheet", href="libs/jquery-plugin-circliful/css/jquery.circliful.css")
 		//- link(rel="stylesheet", href="libs/slick/slick.css")
-		link(rel="stylesheet", href="libs/fullPage.js/dist/fullpage.min.css")
 		//- link(rel="stylesheet", href="libs/Easy-Responsive-Tab-Accordion-Control-Plugin-For-jQuery/easy-responsive-tabs.css")
 
 		//- <link rel="stylesheet" href="css/main.min-2.css" /> 
 		//- link(rel="stylesheet", href="css/main.css")
+		link(rel="stylesheet", href="libs/fullPage.js/fullpage.min.css")
 		link(rel="stylesheet", href="css/main.min.css")
 	body
 		.main-wrapper
 			block pagecontent
 				h3 content
 		+modal()
+		script(src="js/jquery.min.js")
 		//- link(rel="stylesheet", href="fonts/fontello/css/fontello.css")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js")
 		//- bootstrab libs
 		//- script(src="libs/popper.min.js")
 		//- script(src="libs/bootstrap/util.js")
@@ -54,29 +55,29 @@ html(lang="ru")
 		//- script(src="libs/bootstrap/tooltip.js")
 		//- script(src="libs/bootstrap/popover.js")
 		//- /bootstrab libs
-		 
+		script(src="libs/jquery-plugin-circliful/js/jquery.circliful.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js")
 		script(src="libs/fullPage.js/vendors/easings.min.js")
 		script(src="libs/fullPage.js/vendors/scrolloverflow.min.js")
-		script(src="/libs/fullPage.js/dist/fullpage.min.js")
-		script(src="/js/jquery.onepage-scroll.js")
+		script(src="libs/fullPage.js/fullpage.min.js") 
 
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/10.2.1/js/smooth-scroll.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/10.2.1/js/smooth-scroll.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js")
 		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.3/owl.carousel.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.9/js/lightgallery.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.easytabs/3.2.0/jquery.easytabs.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-popup-overlay/1.7.9/jquery.popupoverlay.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.9/js/lightgallery.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.easytabs/3.2.0/jquery.easytabs.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-popup-overlay/1.7.9/jquery.popupoverlay.min.js")
 		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js")
 		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js")
 		//- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js")
 		// modal libs
 		script(src="libs/magnificPopup/jquery.magnific-popup.min.js")
+		script(src="libs/sticky-kit.js")
 		// modal libs
 		// slider libs
 		//- script(src="libs/slick/slick.min.js")
